[gd_scene load_steps=10 format=3 uid="uid://vwry8ixvg1dd"]

[ext_resource type="FontFile" uid="uid://b0d5k3k4xpo3r" path="res://Ac437_IBM_Model3x_Alt1.ttf" id="1_4rmca"]
[ext_resource type="Script" path="res://menu_window.gd" id="1_mpuph"]

[sub_resource type="Theme" id="Theme_txbtm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_288sf"]
bg_color = Color(0, 0, 0, 0.588235)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Theme" id="Theme_7ivfm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p72l8"]
bg_color = Color(1, 1, 1, 1)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="Theme" id="Theme_ro652"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nvehh"]
bg_color = Color(0.69804, 0.558867, 0.580144, 0)
skew = Vector2(2.08165e-12, 2.08165e-12)

[sub_resource type="Theme" id="Theme_5o7j5"]
default_base_scale = 9.0
default_font = ExtResource("1_4rmca")

[node name="MenuBox" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 39.9997
script = ExtResource("1_mpuph")

[node name="PanelBG" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 134.0
offset_bottom = 63.0
theme = SubResource("Theme_txbtm")
theme_override_styles/panel = SubResource("StyleBoxFlat_288sf")

[node name="PanelBorder" type="Panel" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 129.0
offset_bottom = 58.0
theme = SubResource("Theme_7ivfm")
theme_override_styles/panel = SubResource("StyleBoxFlat_p72l8")

[node name="TextContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 1276.0
offset_bottom = 722.0
theme = SubResource("Theme_ro652")
theme_override_styles/panel = SubResource("StyleBoxFlat_nvehh")

[node name="DialogueText" type="RichTextLabel" parent="TextContainer"]
layout_mode = 2
theme = SubResource("Theme_5o7j5")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.47451, 0.47451, 0.47451, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true

[node name="ArrowContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 4.0
offset_right = 42.0
offset_bottom = 38.0
theme = SubResource("Theme_ro652")
theme_override_styles/panel = SubResource("StyleBoxFlat_nvehh")

[node name="ArrowText" type="RichTextLabel" parent="ArrowContainer"]
layout_mode = 2
theme = SubResource("Theme_5o7j5")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.47451, 0.47451, 0.47451, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/normal_font_size = 16
text = "â–º"
